single pages navbar and footer, subfooter changed

--- a/templatemo_545_finance_business/about.html
+++ b/templatemo_545_finance_business/about.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     rel="stylesheet">
 
-  <title>Finance Business - About Page</title>
+  <title>NEPCEMAC - About Page</title>
 
   <!-- Bootstrap core CSS -->
 
@@ -85,7 +85,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <h2>Finance Business</h2>
+          <h2>NEPCEMAC</h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -108,7 +108,7 @@
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="one-page.html">One Page</a>
+              <a class="nav-link" href="#our_circle">Our Circle <i class="fa fa-angle-down" aria-hidden="true"></i></a>
             </li>
           </ul>
         </div>
@@ -311,66 +311,71 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-3 footer-item">
-          <h4>Finance Business</h4>
+        <div class="col-md-4 footer-item">
+          <h4>NEPCEMAC</h4>
           <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
           <ul class="social-icons">
-            <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a>
+            <li><a href="https://www.facebook.com/nepcemac.lalitpur" target="_blank"><i class="fa fa-facebook"></i></a>
             </li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
           </ul>
         </div>
-        <div class="col-md-3 footer-item">
-          <h4>Useful Links</h4>
+        <div class="col-md-2 footer-item">
+          <h4>Download Materials</h4>
           <ul class="menu-list">
-            <li><a href="#">Vivamus ut tellus mi</a></li>
-            <li><a href="#">Nulla nec cursus elit</a></li>
-            <li><a href="#">Vulputate sed nec</a></li>
-            <li><a href="#">Cursus augue hasellus</a></li>
-            <li><a href="#">Lacinia ac sapien</a></li>
+            <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Newsletter</a></li>
+            <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Composting Manuals</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                Manure</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                EM, Bokasi</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                Vermi</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer-item">
+        <div class="col-md-2 footer-item">
           <h4>Additional Pages</h4>
           <ul class="menu-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">How We Work</a></li>
-            <li><a href="#">Quick Support</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="./in_pg/about.html">About Us</a></li>
+            <li><a href="./in_pg/methodology.html">How We Work</a></li>
+            <li><a href="./in_pg/support.html">Quick Support</a></li>
+            <li><a href="#contactus">Contact Us</a></li>
+            <!-- <li><a href="#">Privacy Policy</a></li> -->
           </ul>
         </div>
-        <div class="col-md-3 footer-item last-item">
-          <h4>Contact Us</h4>
-          <div class="contact-form">
-            <form id="contact footer-contact" action="" method="post">
-              <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*"
-                      placeholder="E-Mail Address" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message"
-                      required=""></textarea>
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                  </fieldset>
-                </div>
-              </div>
-            </form>
+        <div class="col-md-4 footer-item last-item" id="our_circle">
+          <h4 style="text-align: center;">Our Circle</h4>
+          <div class="main_card">
+            <div class="background blob1" style="size: 100%;"></div>
+            <div class="background blob2" style="size: 100%;"></div>
+            <div class="cool_card_logo">
+              <p align="center">NEPSEMYAK GROUP</p>
+            </div>
+            <div class="box box1">
+              <a href="https://nepsemyak.com.np" target="_blank"><span class="icon" style="position:absolute;
+            margin-left:-100px;z-index:20;"> Nepsemyak Sewa </span>
+                <img src="assets/images/LOGOS/nepsemyak.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -180px;margin-top: -7px;"></a>
+            </div>
+            <div class="box box2">
+              <a href="https://www.facebook.com/pariwartan.sewa" target="_blank"><span class="icon" style="position:absolute;
+            margin-left:-90px;z-index:20;"> Pariwartan Sewa </span>
+                <img src="assets/images/LOGOS/pariwartan_black.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -170px;margin-top: -7px;"></a>
+            </div>
+            <div class="box box3">
+              <a href="https://www.facebook.com/friends/suggestions/?profile_id=100025109945110" target="_blank"><span
+                  class="icon" style="position:absolute;
+            margin-left:-50px;z-index:20;"> Green City </span>
+                <img src="assets/images/LOGOS/green_city_green.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -130px;margin-top: -7px;"></a>
+            </div>
+            <div class="box box4">
+              <a href="javascript:void(null)" target="_blank"><span class="icon" style="position:absolute;
+            margin-left:-70px;z-index:20;"> Swastha Samaj</span>
+                <img src="assets/images/LOGOS/swastha_samaj_colored.png"
+                  style="height: 48px;width: auto;position: absolute;margin-left: -130px;margin-top: -5px;opacity: 1;"></a>
+            </div>
           </div>
         </div>
       </div>
@@ -381,9 +386,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <h6 style="color: aliceblue;font-variant: small-caps;font-family: Georgia, 'Times New Roman', Times, serif;">
+            2024 , Nepal Environment Pollution Control and Environment Management Center (NEPCEMAC).</h6>
         </div>
       </div>
     </div>
