--- a/templatemo_545_finance_business/about.html
+++ b/templatemo_545_finance_business/about.html
@@ -65,16 +65,15 @@
       <div class="row">
         <div class="col-md-8 col-xs-12">
           <ul class="left-info">
-            <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+            <li><a href="" onclick='return false;'><i class="fa fa-clock-o"></i>Sun-Fri 07:00-15:00 GMT +5:45</a></li>
+            <li><a href="tel:+977-015432827"><i class="fa fa-phone"></i>+977-01-5432827</a></li>
+            <li><a href="tel:+977-015520512"><i class="fa fa-phone"></i>+977-01-5520512</a></li>
           </ul>
         </div>
         <div class="col-md-4">
           <ul class="right-icons">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+            <li><a href="https://www.facebook.com/nepcemac.lalitpur"><i class="fa fa-facebook"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
           </ul>
         </div>
       </div>
