maintained the card of activities in homepage

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -597,7 +597,7 @@
     <div class="time"></div>
   </div>
 
-  
+
   <div class="services" id="services">
     <div class="container">
       <div class="row">
@@ -608,138 +608,162 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h4>
-              <!-- <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h4>
+                <!-- <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
                 people about the benefits of separating biodegradable and non-biodegradable waste</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>WASTE SEGREGATION AWARENESS CAMPAIGN</h4>
-              <!-- <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
-                waste management process.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>WASTE SEGREGATION AWARENESS CAMPAIGN</h4>
+                <!-- <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
+                  waste management process.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>PUBLIC AWARENESS PROGRAMS</h4>
-              <!-- <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
-                issues and waste management.</p>
-                stakeholders, community, as well as minded organizations and service holders regarding environmental -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>PUBLIC AWARENESS PROGRAMS</h4>
+                <!-- <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
+                  issues and waste management.</p>
+                  stakeholders, community, as well as minded organizations and service holders regarding environmental -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h4>
-              <!-- <p>Programs that aim to educate and raise awareness about solid waste management issues through various
-                shows, video documentaries and the use of pamphlets.</p>
-                methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry, -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h4>
+                <!-- <p>Programs that aim to educate and raise awareness about solid waste management issues through various
+                  shows, video documentaries and the use of pamphlets.</p>
+                  methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry, -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>COMMUNITY MOBILIZATION</h4>
-              <!-- <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
-                services are delivered.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>COMMUNITY MOBILIZATION</h4>
+                <!-- <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
+                  services are delivered.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>BUSH REMOVING</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>BUSH REMOVING</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>PUBLICATION</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>PUBLICATION</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>TRAINING</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>TRAINING</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>COMPOSTING</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>COMPOSTING</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>MARKETING OF COMPOST BINS</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>MARKETING OF COMPOST BINS</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>GREENERY DEVELOPMENT</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>GREENERY DEVELOPMENT</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-3">
-          <div class="service-item">
-            <img src="assets/images/scroll/1.png" alt="">
-            <div class="down-content">
-              <h4>PAPER RECYCLING</h4>
-              <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
-                local place.</p> -->
-              <!-- <a href="" class="filled-button">Read More</a> -->
+          <a href="./services.html">
+            <div class="service-item">
+              <img src="assets/images/scroll/1.png" alt="">
+              <div class="down-content">
+                <h4>PAPER RECYCLING</h4>
+                <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
+                  local place.</p> -->
+                <!-- <a href="" class="filled-button">Read More</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -955,9 +979,12 @@
           <ul class="menu-list">
             <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Newsletter</a></li>
             <li><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">Composting Manuals</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> Manure</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> EM, Bokasi</a></li>
-            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html"> Vermi</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                Manure</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                EM, Bokasi</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="https://www.nepsemyak.com.np/in_pg/downloads.html">
+                Vermi</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-item">
